...
          ReportForm: 'report',
          PastReports: 'my-reports',
          SpeciesInfo: 'species',
          LicenseDetails: 'license',
          CatchFeed: 'catchfeed',
          Bulletins: 'bulletins',
          Profile: 'profile',
          Confirmation: 'confirmation',
          LegalDocument: 'legal/:type',
          Promotions: 'promotions',
          PartnerInquiry: 'partner-inquiry',
        },
      },
...
        }}
      >
          <Stack.Screen
            name="Home"
            component={HomeScreen}
            options={{ 
              title: "Fish Log Co.",
              headerShown: false,
            }}
          />
          <Stack.Screen
            name="ReportForm"
            component={ReportFormScreen}
...
